--- a/.github/workflows/content_refresh.yml
+++ b/.github/workflows/content_refresh.yml
@@ -1,28 +1,33 @@
-```yaml
-name: Scheduled Content Refresh
+      - name: Create GitHub Issue
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const issueTitle = "🌀 Quarterly Content Refresh Reminder";
+            const issueBody = `
+It's time to refresh your website listings and activity content!
 
-on:
-  schedule:
-    # Every 4 months approximation: Jan 1, May 1, Sept 1 at 00:00 UTC
-    - cron: '0 0 1 1,5,9 *'
-  workflow_dispatch:  # allows you to run it manually too
+**Suggested tasks:**
+- Add new free activities and local resources
+- Review recent community submissions
+- Update ZIP-code based activity listings
+- Check external APIs for any content pulls
 
-jobs:
-  refresh-content:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+*This is an automated reminder generated every 4 months.*
+            `;
 
-      - name: Notify Admin
-        run: |
-          echo "Time for a seasonal content refresh!" > refresh_reminder.txt
-          echo "Please review new community activities and update the listings." >> refresh_reminder.txt
+            const { data: issues } = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open'
+            });
 
-      - name: Commit reminder (optional)
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add refresh_reminder.txt
-          git commit -m "Automated content refresh reminder"
-          git push
+            const existing = issues.find(issue => issue.title === issueTitle);
+            if (!existing) {
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: issueTitle,
+                body: issueBody
+              });
+            }
